src/Pokemon.css
.Pokemon {
    -webkit-box-shadow: 0px 0px 20px 0px rgba(66, 68, 90, 1);
    -moz-box-shadow: 0px 0px 20px 0px rgba(66, 68, 90, 1);
    box-shadow: 0px 0px 20px 0px rgba(66, 68, 90, 1);
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 10px;
    height: inherit;
}

.Pokemon-img-figure {
    width: 200px;
    height: 200px;
    background: rgb(215, 226, 226);
    margin-top: 1em;
    border-radius: 10px;
    display: flex;
    justify-content: center;
}

.Pokemon-img {
    overflow: auto;
    width: 200px;
}
.Pokemon-card {
    height: 400px;
}
.Pokemon-types-box {
    display: flex;
    flex-direction: row;
    width: 90%;
    margin: auto;
}
.Pokemon-type {
    width: 45%;
    padding: 2px;
    border-radius: 10px;
}

